<resources>
    <string name="app_name">omie</string>
    <string name="omie">Omie</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="invalid_email">Email inválido</string>
    <string name="invalid_password">Senha inválida</string>

    <!--    sing in-->
    <string name="sing_in">Entrar</string>
    <string name="image_logo">imagem logo</string>
    <string name="sing_in_error">Erro ao logar</string>

    <!--    sing up-->
    <string name="title_sing_up">Cadastrar usuário</string>
    <string name="sing_up_user">Cadastrar usuário</string>
    <string name="register_success">Registrado com successo!</string>
    <string name="sing_up_error">Erro ao registrar</string>
    <string name="name">Nome</string>

    <!--    home-->
    <string name="title_home">Pedidos</string>
    <string name="add_order">Adicionar pedido</string>
    <string name="new_order">Novo pedido</string>
    <string name="order_name">Pedido %s</string>
    <string name="empty_list">Lista vazia</string>
    <string name="loading">Carregando...</string>
    <string name="logged_in_logout">Logout</string>
    <string name="logged_in_title">Logged in!</string>
    <string name="total_orders">Total de vendas: R$%s</string>

<!--    new_order-->
    <string name="title_new_order">Novo Pedido</string>
    <string name="name_client">Nome do cliente</string>
    <string name="add_item">Adicionar produto</string>
    <string name="new_item">Novo produto</string>
    <string name="save_order">Salvar produto</string>
    <string name="price_item">Valor: R$ %s</string>
    <string name="quantity">Qtd: %s</string>
    <string name="total_items">Total de itens: %s</string>
    <string name="total_price">Total: %s</string>
    <string name="name_required">Nome obrigatório</string>
    <string name="add_least_a_item">Adicione um produto</string>


</resources>