<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_sing_up_text_input_layout_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_sing_up_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_sing_up_text_input_layout_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:errorIconDrawable="@null"
            app:layout_constraintEnd_toEndOf="@id/activity_sing_up_text_input_layout_name"
            app:layout_constraintStart_toStartOf="@id/activity_sing_up_text_input_layout_name"
            app:layout_constraintTop_toBottomOf="@id/activity_sing_up_text_input_layout_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_sing_up_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_sing_up_text_input_layout_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:errorIconDrawable="@null"
            app:layout_constraintEnd_toEndOf="@id/activity_sing_up_text_input_layout_email"
            app:layout_constraintStart_toStartOf="@id/activity_sing_up_text_input_layout_email"
            app:layout_constraintTop_toBottomOf="@id/activity_sing_up_text_input_layout_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_sing_up_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/activity_sing_up_button_sing_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sing_up_user"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/activity_sing_up_text_input_layout_password"
            app:layout_constraintStart_toStartOf="@id/activity_sing_up_text_input_layout_password"
            app:layout_constraintTop_toBottomOf="@id/activity_sing_up_text_input_layout_password"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>